--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         go-version: '^1.15.8'
 
-    - name: Check Style
+    - name: Verify
       run: make verify
 
     - name: Tests
